// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a login form 1`] = `
<form
  className="container"
>
  <div
    className="row form-group"
  >
    <label
      className="col-sm-2 col-form-label"
      htmlFor="username"
    >
      Username:
    </label>
    <div
      className="col-sm-10"
    >
      <input
        className="form-control"
        id="username"
        name="username"
        placeholder="Enter your username"
        required={true}
        type="text"
      />
      <div
        className="invalid-feedback"
        invalid={true}
      >
        Username is incorrect
      </div>
    </div>
  </div>
  <div
    className="row form-group"
  >
    <label
      className="col-sm-2 col-form-label"
      htmlFor="password"
    >
      Password:
    </label>
    <div
      className="col-sm-10"
    >
      <input
        className="form-control"
        id="password"
        name="password"
        placeholder="Enter your password"
        required={true}
        type="password"
      />
      <div
        className="invalid-feedback"
        invalid={true}
      >
        Password is incorrect
      </div>
    </div>
  </div>
  <div
    className="text-center"
  >
    <button
      aria-label={null}
      className="btn btn-secondary"
      onClick={[Function]}
    >
      Login
    </button>
  </div>
  <br />
</form>
`;

exports[`renders a successful login 1`] = `
<form
  className="container"
>
  <div
    className="row form-group"
  >
    <label
      className="col-sm-2 col-form-label"
      htmlFor="username"
    >
      Username:
    </label>
    <div
      className="col-sm-10"
    >
      <input
        className="is-valid form-control"
        id="username"
        name="username"
        placeholder="Enter your username"
        required={true}
        type="text"
      />
      <div
        className="invalid-feedback"
        invalid={true}
      >
        Username is incorrect
      </div>
    </div>
  </div>
  <div
    className="row form-group"
  >
    <label
      className="col-sm-2 col-form-label"
      htmlFor="password"
    >
      Password:
    </label>
    <div
      className="col-sm-10"
    >
      <input
        className="is-valid form-control"
        id="password"
        name="password"
        placeholder="Enter your password"
        required={true}
        type="password"
      />
      <div
        className="invalid-feedback"
        invalid={true}
      >
        Password is incorrect
      </div>
    </div>
  </div>
  <div
    className="text-center"
  >
    <button
      aria-label={null}
      className="btn btn-secondary"
      onClick={[Function]}
    >
      Login
    </button>
  </div>
  <br />
  <h1
    className="text-center text-success"
  >
    hello
     Logged In
  </h1>
</form>
`;
